<resources>
    <string name="shr_app_name">Como en casa</string>
    <string name="shr_hint_username">E-mail</string>
    <string name="shr_hint_name">Nombre</string>
    <string name="shr_hint_surname">Apellido</string>
    <string name="shr_hint_password">Contraseña</string>
    <string name="shr_hint_password_confirmation">Vuelva a ingresar su contraseña...</string>
    <string name="shr_button_login">Iniciar Sesión</string>
    <string name="shr_button_register">¿No estás registado aún? Regístrate!</string>
    <string name="shr_button_forgotten_password">¿Olvidaste tu contraseña?</string>
    <string name="shr_error_password">Las contraseñas deben ser mayor a 8 caracteres, contener mayusculas, contener minusculas y contener al menos un numero</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_filter">Filtrar</string>
    <string name="shr_apply_filter">Aplicar filtro</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Crear cuenta  -->
    <string name="shr_take_picture">Tomar foto</string>
    <string name="shr_select_picture">Elegir foto</string>
    <string name="shr_register_user_buttontext">Registrar usuario</string>
    <string name="shr_error_password_confirmation">Las contraseñas no coinciden</string>
    <string name="shr_error_name">Debe ingresar su nombre</string>
    <string name="shr_error_surname">Debe ingresar su apellido</string>
    <string name="shr_error_email">Debe ingresar su correo electrónico</string>
    <string name="shr_hint_title_vt">Nombre del plato</string>
    <string name="shr_hint_description_vt">Descripción</string>
    <string name="shr_hint_price_vt">Precio</string>
    <string name="shr_hint_quantity_vt">Cantidad</string>
    <string name="shr_set_picker">Establecer fecha y hora</string>
    <string name="shr_cancel">Cancelar</string>
    <string name="shr_hint_auto_accept_vt">Auto aceptar comensales</string>
    <string name="shr_button_generate_vt">Crear mesa virtual</string>
    <string name="shr_button_modify_vt">Modificar mesa virtual</string>
    <string name="shr_reservation_hint_datetime_vt">Fecha y hora limite para reservas</string>
    <string name="shr_hint_datetime_vt">Fecha y hora para la entrega</string>
    <string name="shr_date_vt">Hora de retiro</string>

    <string name="shr_direcciones">Mis direcciones</string>
    <string name="shr_mis_pedidos">Mis pedidos</string>
    <string name="shr_favoritos">Favoritos</string>
    <string name="shr_mi_cuenta">Mi cuenta</string>
    <string name="shr_ayuda">Ayuda</string>
    <string name="shr_radius">Radio</string>
    <string name="shr_virtual_table_title">Nombre de plato</string>
    <string name="shr_virtual_table_max_price">Precio máximo</string>
    <string name="shr_virtual_table_min_score">Puentuación mínima</string>
    <string name="mercadopago_pay_method">MercadoPago</string>
    <string name="cash_pay_method">Efectivo</string>
    <string name="pay_method">Forma de pago</string>

</resources>
