<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GenerarMesaFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_marginTop="48dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<ImageView
             android:id="@+id/generate_virtual_table_image"
             android:layout_width="170dp"
             android:layout_height="125sp"
             android:src="@color/colorPrimary"/>-->

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/generate_virtual_table_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_como_en_casa"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="15dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/take_picture_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/shr_camera_icon"
                android:text="@string/shr_take_picture"/>
            <android.support.design.button.MaterialButton
                android:id="@+id/select_picture_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/shr_gallery_image"
                android:text="@string/shr_select_picture"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/title_vt_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shr_hint_title_vt"
        android:layout_marginTop="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/title_vt_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/description_vt_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shr_hint_description_vt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/description_vt_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/price_vt_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shr_hint_price_vt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/price_vt_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/quantity_vt_field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shr_hint_quantity_vt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quantity_vt_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/pay_method_vt_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_marginTop="12dp">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/datetime_vt_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shr_hint_datetime_vt">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/datetime_vt_field_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



    <android.support.v7.widget.SwitchCompat
        android:id="@+id/auto_accept_switch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checked="true"
        android:text="@string/shr_hint_auto_accept_vt">
    </android.support.v7.widget.SwitchCompat>

    <android.support.design.button.MaterialButton
        android:id="@+id/generate_vt_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/shr_button_generate_vt" />

    <android.support.design.button.MaterialButton
        android:id="@+id/cancel_vt_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shr_cancel"/>


</LinearLayout>
</FrameLayout>